--- a/newIndex.html
+++ b/newIndex.html
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/css?family=Della+Respira|Pirata+One" rel="stylesheet">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <script type="text/javascript" src="scripts/jquery-1_8_3.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="style/newStyle.css">
   <!-- <script>
   setTimeout(function(){document.getElementsByTagName('body')[0].style.height = window.innerHeight+'px';
           },20);
