--- a/newIndex.html
+++ b/newIndex.html
@@ -66,7 +66,7 @@
           <div class="min">
             <div class="tc_login">
               <div class="center">
-                <form action="game.html" id="customGame" method="get">
+                <form action="game.html" id="customGame" method="get" target="_top">
         <p>Name Your Category:</p>
         <input type="text" name="categoryName" id="categoryName">
 
