--- a/game.html
+++ b/game.html
@@ -70,10 +70,9 @@
 
         </div>
         </div>
-<div id="instructions">
- <p>Forget how to play?</p>
-  
-</div>
+
+ <p id="instructions">Click on the image that matches your treasure list!!</p>
+
         
 </div>
 
