--- a/newIndex.html
+++ b/newIndex.html
@@ -67,6 +67,7 @@
             <div class="tc_login">
               <div class="center">
                 <form action="game.html" id="customGame" method="get" target="_top">
+                  <div align="center">
         <p>Name Your Category:</p>
         <input type="text" name="categoryName" id="categoryName">
 
@@ -108,7 +109,8 @@
           <option value="10">10</option>
           <option value="15">15</option>
         </select>
-        <button type="submit" id="customGameSubmit" class="button">Play Now!</buton>
+        <button type="submit" id="customGameSubmit" class="button">Play Now!</button>
+                  </div>
          </form>
         </div>
       </div>
