--- a/newIndex.html
+++ b/newIndex.html
@@ -114,6 +114,7 @@
       </div>
     </div>
   </div>
+ </div>
       
   <script type="text/javascript" src="scripts/windowMove.js"></script>
   <script type="text/javascript" src="scripts/windowDisplay.js"></script>
