--- a/newIndex.html
+++ b/newIndex.html
@@ -77,7 +77,7 @@
         <input type="text" name="searchTerm5" id="searchTerm5">
         <input type="text" name="searchTerm6" id="searchTerm6">
 
-        <p>Choose The Number Of Treasures</p>
+        <p>Choose The Number Of Treasures
         <select name="numberOfTreasures" id="numberOfTreasures">
           <option value="1">1</option>
           <option value="2">2</option>
@@ -89,24 +89,24 @@
           <option value="8">8</option>
           <option value="9">9</option>
           <option value="10">10</option>
-        </select>
+        </select></p>
 
-        <p>Choose Game Size:</p>
+        <p>Choose Game Size:
         <select name="gameSize" id="gameSize">
           <option value="type" selected="selected">--Extras--</option>
           <option value="3" selected="selected">3x3</option>
           <option value="4">4x4</option>
           <option value="5">5x5</option>
-        </select>
+        </select></p>
 
-        <p>Choose Time Limit (Minutes):</p>
+        <p>Choose Time Limit (Minutes):
         <select class="timeLimit" id="timeLimit">
           <option value="3">3</option>
           <option value="5" selected="selected">5</option>
           <option value="7">7</option>
           <option value="10">10</option>
           <option value="15">15</option>
-        </select>
+        </select></p>
         <button type="submit" id="customGameSubmit" class="button">Play Now!</button>
 
          </form>
