--- a/endgame.html
+++ b/endgame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style/style.css">
+<link rel="stylesheet" href="style/newStyle.css">
 <link href="https://fonts.googleapis.com/css?family=Della+Respira|Pirata+One" rel="stylesheet">
 <meta charset="UTF-8">
 <title>Treasure Trove</title>
@@ -9,9 +9,16 @@
 </head>
 
 <body>
+<div class="endGame">
 	<h1><center>Congratulations!</center></h1>
 	<h2><center>All of the treasures have been found!</center></h2>
 		<img id="chest" src="images/treasureChest.jpg" alt="Treasure Chest" height="450px" width="550px">
+
+		
+	<div class="outer">
+		<img class="congratulations" src="images/PirateCongratulations.png">
+	</div>
+</div>
 
 		<form>
 			<input id= "newgame" type="button" value="New Game" onclick="window.location.href='index.html'"/>
