--- a/newIndex.html
+++ b/newIndex.html
@@ -69,9 +69,10 @@
         <p>Name Your Category:
         <input type="text" name="categoryName" id="categoryName"></p>
 
-        <p>Enter Your Search Terms:<input type="text" name="searchTerm1" id="searchTerm1"></p>
+        <p>Enter Your Search Terms:<input type="text" name="searchTerm1" id="searchTerm1">
 	<button id="add">+</button>
         <div id="inputbox"></div>
+	</p>
         
 
         <p>Choose The Number Of Treasures:
