--- a/newIndex.html
+++ b/newIndex.html
@@ -70,8 +70,8 @@
         <input type="text" name="categoryName" id="categoryName"></p>
 
         <p>Enter Your Search Terms:<input type="text" name="searchTerm1" id="searchTerm1">
-	<button id="add">+</button>
-        <div id="inputbox"></div>
+	<button id="add">+</button></p>
+        <p><div id="inputbox"></div>
 	</p>
         
 
