--- a/endgame.html
+++ b/endgame.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style/newStyle.css">
+<link rel="stylesheet" href="style/animation.css">
 <link href="https://fonts.googleapis.com/css?family=Della+Respira|Pirata+One" rel="stylesheet">
 <meta charset="UTF-8">
 <title>Treasure Trove</title>
@@ -15,9 +16,22 @@
 		<img id="chest" src="images/treasureChest.jpg" alt="Treasure Chest" height="450px" width="550px">
 
 		
-	<div class="outer">
+	<div class="animations">
 		<img class="congratulations" src="images/PirateCongratulations.png">
+
+		<img src="images/blueDimond.png" class="Dimond" id="blueDimond">
+		<img src="images/greenDimond.png" class="Dimond" id="greenDimond">
+		<img src="images/redDimond.png" class="Dimond" id="redDimond">
+	
+		<img src="images/blueDimond.png" class="Dimond2" id="blueDimond2">
+		<img src="images/redDimond.png" class="Dimond2" id="redDimond2">
+		<img src="images/greenDimond.png" class="Dimond2" id="greenDimond2">
+
+		<img src="images/redDimond.png" class="Dimond3" id="redDimond3">
+		<img src="images/greenDimond.png" class="Dimond3" id="greenDimond3">
+		<img src="images/blueDimond.png" class="Dimond3" id="blueDimond3">
 	</div>
+
 </div>
 
 		<form>
