--- a/game.html
+++ b/game.html
@@ -12,7 +12,6 @@
   <script type="prettyPhoto/js/jquery-1.6.1.min.js"></script>
 
   <link rel="stylesheet" href="prettyPhoto/css/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
-
   <script src="prettyPhoto/js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
 
   <script type="text/javascript" src="scripts/newGame.js"></script>
@@ -42,7 +41,7 @@
 </div>
 
 <table id='list'>
-	<tr>
+	<!-- <tr>
 		<td>
 		Nulla Nulla and Sheilds
 		</td>
@@ -84,12 +83,12 @@
 		</td>
     <td class='check'>
 		</td>
-	</tr>
+	</tr> -->
 
 </table>
 
 <div id='imagegrid'>
-  <a href="" rel="prettyPhoto" title="">
+  <!-- <a href="" rel="prettyPhoto" title="">
 	   <img id="1" class="grid" src="Test images/Sharpening.jpg" alt="" />
   </a>
   <a href="" rel="prettyPhoto" title="">
@@ -136,7 +135,7 @@
   </a>
   <a href="" rel="prettyPhoto" title="">
   	<img id="16" class='grid' src="Test images/Sculpture.jpg" alt="First element of grid" />
-  </a>
+  </a> -->
 
 </div>
 
