--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
   <script type="prettyPhoto/js/jquery-1.6.1.min.js"></script>
 
   <link rel="stylesheet" href="prettyPhoto/css/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
+
   <script src="prettyPhoto/js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
 
   <script type="text/javascript" src="scripts/newGame.js"></script>
@@ -19,9 +20,43 @@
 
   <!-- prettyPhoto script -->
   <script type="text/javascript" src="scripts/forPrettyPhoto.js" charset="utf-8"></script>
-  <script type="text/javascript" src="scripts/timerCountDown.js" charset="utf-8"></script>
-</head>
 
+<script language="javascript">
+    window.onload = function ()
+    {
+    var oCountDown = document.getElementById("countdown");
+    var aInput = oCountDown.getElementsByTagName("input")[0];
+    var timer = null;
+    aInput.onclick = function ()
+        {
+            this.className == "" ? (timer = setInterval(updateTime, 1000), updateTime()) : (clearInterval(timer));
+            this.className = this.className == '' ? "cancel" : '';
+        };
+    function format(a)
+        {
+            return a.toString().replace(/^(\d)$/,'0$1');
+        }
+    function updateTime ()
+        {
+            var aSpan = oCountDown.getElementsByTagName("span");
+            var oRemain = aSpan[0].innerHTML.replace(/^0/,'') * 60 + parseInt(aSpan[1].innerHTML.replace(/^0/,''));
+            if(oRemain <= 0)
+        {
+            window.location = "endGame.html";
+            return;
+        }
+            oRemain--;
+            aSpan[0].innerHTML = format(parseInt(oRemain / 60));
+            oRemain %= 60;
+            aSpan[1].innerHTML = format(parseInt(oRemain));
+        }
+
+        aInput.click();
+		aInput.style.display="none"
+    }
+</script>
+
+</head>
 <body>
 <div id="topBanner">
 	<h1>Treasure Trove</h1>
@@ -34,9 +69,10 @@
         <input type="button" value="start" />
 
         </div>
-      </div>
+        </div>
 
  <p id="instructions">Click on the image that matches your treasure list!!</p>
+
 
 </div>
 
@@ -138,10 +174,10 @@
   </a> -->
 
 </div>
-
-  <a href="" rel="prettyPhoto" title="">
+<a href="" rel="prettyPhoto" title="">
     <img id="moremap" src="images/moreMap.png" alt="" />
   </a>
+
 		<form>
 			<input id= "newgame" type="button" value="New Game" onclick="window.location.href='index.html'"/>
 		</form>
