--- a/newIndex.html
+++ b/newIndex.html
@@ -70,9 +70,9 @@
         <input type="text" name="categoryName" id="categoryName"></p>
 
         <p>Enter Your Search Terms:<input type="text" name="searchTerm1" id="searchTerm1">
-	<button id="add">+</button></p>
-        <p><div id="inputbox"></div>
-	</p>
+	<button type="button" id="add">+</button></p>
+        <div id="inputbox"></div>
+	
         
 
         <p>Choose The Number Of Treasures:
