--- a/newIndex.html
+++ b/newIndex.html
@@ -118,7 +118,7 @@
 	<script type="text/javascript">
 	var counter = 1;
         var add = document.getElementById('add'),
-            inputbox = document.getElementById('incontainer');
+            inputbox = document.getElementById('inputbox');
         add.onclick = function(){
 			if (counter < 8) {
 			   var input = document.createElement("input");
