--- a/endGame.html
+++ b/endGame.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style/style.css">
+<link rel="stylesheet" href="style/newStyle.css">
+<link rel="stylesheet" href="style/animation.css">
 <link href="https://fonts.googleapis.com/css?family=Della+Respira|Pirata+One" rel="stylesheet">
 <meta charset="UTF-8">
 <title>Treasure Trove</title>
@@ -9,9 +10,29 @@
 </head>
 
 <body>
+<div class="endGame">
 	<h1><center>Congratulations!</center></h1>
 	<h2><center>All of the treasures have been found!</center></h2>
 		<img id="chest" src="images/treasureChest.jpg" alt="Treasure Chest" height="450px" width="550px">
+
+		
+	<div class="animations">
+		<img class="congratulations" src="images/PirateCongratulations.png">
+
+		<img src="images/blueDimond.png" class="Dimond" id="blueDimond">
+		<img src="images/greenDimond.png" class="Dimond" id="greenDimond">
+		<img src="images/redDimond.png" class="Dimond" id="redDimond">
+	
+		<img src="images/blueDimond.png" class="Dimond2" id="blueDimond2">
+		<img src="images/redDimond.png" class="Dimond2" id="redDimond2">
+		<img src="images/greenDimond.png" class="Dimond2" id="greenDimond2">
+
+		<img src="images/redDimond.png" class="Dimond3" id="redDimond3">
+		<img src="images/greenDimond.png" class="Dimond3" id="greenDimond3">
+		<img src="images/blueDimond.png" class="Dimond3" id="blueDimond3">
+	</div>
+
+</div>
 
 		<form>
 			<input id= "newgame" type="button" value="New Game" onclick="window.location.href='index.html'"/>
