--- a/newIndex.html
+++ b/newIndex.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+<div class="page">
   <div class="pageHeading">
     <h1>Treasure Trove</h1>
   </div>
@@ -113,7 +114,7 @@
     </div>
   </div>
  </div>
-  
+</div>
 
 	<script type="text/javascript">
 	var counter = 1;
