added treasures to end game page

--- a/endgame.html
+++ b/endgame.html
@@ -7,6 +7,7 @@
 <meta charset="UTF-8">
 <title>Treasure Trove</title>
 <script type="text/javascript" src="scripts/jquery-1_8_3.js"></script>
+<script type="text/javascript" src="scripts/endgame.js"></script>
 </head>
 
 <body>
@@ -17,16 +18,16 @@
 
 		<img id="chest" src="images/treasureChest.jpg" alt="Treasure Chest" height="450px" width="550px">
 
-		
-	
-		
+
+
+
 	<div class="animations">
 		<img class="congratulations" src="images/PirateCongratulations.png">
 
 		<img src="images/blueDimond.png" class="Dimond" id="blueDimond">
 		<img src="images/greenDimond.png" class="Dimond" id="greenDimond">
 		<img src="images/redDimond.png" class="Dimond" id="redDimond">
-	
+
 		<img src="images/blueDimond.png" class="Dimond2" id="blueDimond2">
 		<img src="images/redDimond.png" class="Dimond2" id="redDimond2">
 		<img src="images/greenDimond.png" class="Dimond2" id="greenDimond2">
@@ -36,7 +37,7 @@
 		<img src="images/blueDimond.png" class="Dimond3" id="blueDimond3">
 	</div>
 
-			
+
 </div>
 <form>
 <input id= "newgame" type="button" value="New Game" onclick="window.location.href='index.html'"/>
