--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
 
   <script src="prettyPhoto/js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
 
-  <script type="text/javascript" src="scripts/newGame.js"></script>
+  <script type="text/javascript" src="scripts/game.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Della+Respira|Pirata+One" rel="stylesheet">
 
   <!-- prettyPhoto script -->
