--- a/endGame.html
+++ b/endGame.html
@@ -7,22 +7,27 @@
 <meta charset="UTF-8">
 <title>Treasure Trove</title>
 <script type="text/javascript" src="scripts/jquery-1_8_3.js"></script>
+<script type="text/javascript" src="scripts/endgame.js"></script>
 </head>
 
 <body>
+
 <div class="endGame">
 	<h1><center>Congratulations!</center></h1>
 	<h2><center>All of the treasures have been found!</center></h2>
+
 		<img id="chest" src="images/treasureChest.jpg" alt="Treasure Chest" height="450px" width="550px">
 
-		
+
+
+
 	<div class="animations">
 		<img class="congratulations" src="images/PirateCongratulations.png">
 
 		<img src="images/blueDimond.png" class="Dimond" id="blueDimond">
 		<img src="images/greenDimond.png" class="Dimond" id="greenDimond">
 		<img src="images/redDimond.png" class="Dimond" id="redDimond">
-	
+
 		<img src="images/blueDimond.png" class="Dimond2" id="blueDimond2">
 		<img src="images/redDimond.png" class="Dimond2" id="redDimond2">
 		<img src="images/greenDimond.png" class="Dimond2" id="greenDimond2">
@@ -32,13 +37,14 @@
 		<img src="images/blueDimond.png" class="Dimond3" id="blueDimond3">
 	</div>
 
-</div>
 
-		<form>
-			<input id= "newgame" type="button" value="New Game" onclick="window.location.href='index.html'"/>
+</div>
+<form>
+<input id= "newgame" type="button" value="New Game" onclick="window.location.href='index.html'"/>
 		</form>
 		<form>
 			<input id= "leaderboard" type="button" value="Leader Board" onclick="window.location.href='leaderboard.html'"/>
 		</form>
+
 </body>
 </html>
