--- a/newIndex.html
+++ b/newIndex.html
@@ -18,7 +18,14 @@
 </head>
 
 <body>
+
 <div class="page">
+
+<div class="indexAnimation"> 
+<img src="images/pirateWelcome.png" id="pirateWelcome" class="indexWelcome">
+
+<img src="images/pirate.png" id="pirateDown" class="indexWelcome">
+
   <div class="pageHeading">
     <h1>Treasure Trove</h1>
   </div>
