changed index to have name entered at the start

--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
   </div>
 
   <div class="container">
+
+      <form action="insertdb.php" method="POST">
+        <h2> ENTER YOUR NAME:</h2>
+        <input type="text" name="input1" id="loginText">
+        <button type="submit" id="loginbutton">ENTER</button>
+      </form>
+
+    <h2>AND</h2>
+
     <div class="option" id="pickCategory">
       <h2>Pick a Category:</h2>
       <form action="game.html" id="pickedCategoryForm" method="get">
@@ -120,14 +129,6 @@
       </div>
     </div>
   </div>
-
-<h2>OR<h2>
-  <form action="insertdb.php" method="POST">
-    <h2> ENTER YOUR NAME:</h2>
-    <input type="text" name="input1" id="loginText">
-    <button type="submit" id="loginbutton">ENTER</button>
-  </form>
-
 
  </div>
 </div>
