--- a/game.html
+++ b/game.html
@@ -16,47 +16,12 @@
   <script src="prettyPhoto/js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
 
   <script type="text/javascript" src="scripts/game.js"></script>
+  <script type="text/javascript" src="scripts/timerCountDown.js"></script>
+
   <link href="https://fonts.googleapis.com/css?family=Della+Respira|Pirata+One" rel="stylesheet">
 
   <!-- prettyPhoto script -->
   <script type="text/javascript" src="scripts/forPrettyPhoto.js" charset="utf-8"></script>
-  <script type="text/javascript">
-	   window.onload = function ()
-    {
-    var oCountDown = document.getElementById("countdown");
-    var aInput = oCountDown.getElementsByTagName("input")[0];
-    var timer = null;
-    aInput.onclick = function ()
-        {
-            this.className == "" ? (timer = setInterval(updateTime, 1000), updateTime()) : (clearInterval(timer));
-            this.className = this.className == '' ? "cancel" : '';
-        };
-    function format(a)
-        {
-            return a.toString().replace(/^(\d)$/,'0$1');
-        }
-    function updateTime ()
-        {
-            var aSpan = oCountDown.getElementsByTagName("span");
-            var oRemain = aSpan[0].innerHTML.replace(/^0/,'') * 60 + parseInt(aSpan[1].innerHTML.replace(/^0/,''));
-            if(oRemain <= 0)
-        {
-            window.location = "endGame.html";
-            return;
-        }
-            oRemain--;
-            aSpan[0].innerHTML = format(parseInt(oRemain / 60));
-            oRemain %= 60;
-            aSpan[1].innerHTML = format(parseInt(oRemain));
-        }
-
-        aInput.click();
-		aInput.style.display="none"
-    }
-	   </script>
-
-
-
 </head>
 <body>
 <div id="topBanner">
