cleaning and commenting

--- a/endgame.html
+++ b/endgame.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style/newStyle.css">
-<link rel="stylesheet" href="style/animation.css">
+<link rel="stylesheet" href="style/endGame.css">
 <link href="https://fonts.googleapis.com/css?family=Della+Respira|Pirata+One" rel="stylesheet">
 <meta charset="UTF-8">
 <title>Treasure Trove</title>
@@ -20,10 +20,11 @@
 
 
 
-
+<!-- animated pirate source image -->
 	<div class="animations">
 		<img class="congratulations" src="images/PirateCongratulations.png">
 
+<!-- Animating the coloured dimonds in the treasure chest -->
 		<img src="images/blueDimond.png" class="Dimond" id="blueDimond">
 		<img src="images/greenDimond.png" class="Dimond" id="greenDimond">
 		<img src="images/redDimond.png" class="Dimond" id="redDimond">
