--- a/game.html
+++ b/game.html
@@ -25,11 +25,11 @@
 </head>
 <body>
 <div id="topBanner">
-	<h1>Treasure Trove</h1>
+  <h1>Treasure Trove</h1>
 
-	<div class="box">
-
-	<div id="countdown">
+  <div class="box">
+<!-- timer box --> 
+  <div id="countdown">
         <span>1</span>:<span>30</span>
 
         <input type="button" value="start" />
@@ -41,20 +41,21 @@
 
 
 </div>
-
+<!-- treasure list table -->
 <table id='list'>
 </table>
-
+<!-- image grid constructed dynamically -->
 <div id='imagegrid'>
 </div>
 
+<!-- More about the map button and popup -->
 <a href="" rel="prettyPhoto" title="">
     <img id="moremap" src="images/moreMap.png" alt="" />
   </a>
-
-		<form>
-			<input id= "newgame" type="button" value="New Game" onclick="window.location.href='index.html'"/>
-		</form>
+<!-- new game button-->
+    <form>
+      <input id= "newgame" type="button" value="New Game" onclick="window.location.href='index.html'"/>
+    </form>
 
 
 </body>
