--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style/style.css">
+<link rel="stylesheet" href="style/newStyle.css">
+<link rel="stylesheet" href="style/endGame.css">
 
 <meta charset="UTF-8">
 <title>Treasure Trove</title>
